# Avrcp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.old
DataVisual/: CMakeLists.txt  Presentazione.pptx  analysis.ipynb  package-lock.json  package.json
DataVisual/StudentsApproach/: package-lock.json  package.json
DataVisual/StudentsApproach/src/: App.vue
DataVisual/StudentsApproach/src/components/: Chart.vue  HelloWorld.vue
DataVisual/SustainRace/: package-lock.json  package.json  tsconfig.json
DataVisual/SustainRace/public/: owid-energy-data-1990-aggregate.csv
DataVisual/SustainRace/src/: App.vue
DataVisual/SustainRace/src/components/: Chart.vue  Composer.vue  HelloWorld.vue  Map.vue
DataVisual/SustainRace/src/components/Istruments/: BubbleChart.vue  Map.vue  StackedChart.vue  SunBurst.vue  TemporalHistogram.vue
DataVisual/SustainRace/src/components/Managers/: BubbleChartManager.vue  MapManager.vue  SunBurstManager.vue  TemporalChartManager.vue
DataVisual/SustainRace/src/components/Support/: DataManager.ts
DataVisual/cplugin/: CMakeLists.txt
DataVisual/doc/: analysis.ipynb  renewable.ipynb
DataVisual/doc/dataset/: README.md
NetAnalysis/: Analyzers.cpp  CMakeLists.txt  GraphAnalyzer.cpp  Plotter.cpp  Routines.cpp  main.cpp
NetAnalysis/doc/: musae_git_edges.csv  network.ipynb  network.py  tech_report.tex
NetAnalysis/doc/_minted-tech_report/: CD462C16AA1D7B6D712C0BAE170E35CBDD6CC10C6FEC33DFE7A0F5EDDF08E70F.pygtex
NetAnalysis/include/: Analyzers.hpp  Centralities.hpp  Communities.hpp  Components.hpp  GraphAnalyzer.hpp  GraphVisualizer.hpp  Logger.hpp  Plotter.hpp  Routines.hpp  Support.hpp  main.hpp
NetAnalysis/include/Gui/: QtClass.cpp  QtClass.h  mainwindow.cpp  mainwindow.ui  ui_mainwindow.h
NetAnalysis/netanalyst/: CMakeLists.txt  README.md  package-lock.json  package.json
NetAnalysis/netanalyst/src/: App.vue  main.js
NetAnalysis/netanalyst/src/components/: Graphs.vue  HelloWorld.vue  WelcomeItem.vue
NetAnalysis/src/: Centralities.cpp  Communities.cpp  Components.cpp  GraphVisualizer.cpp  Logger.cpp  Plotter.cpp  Routines.cpp  main.cpp
